Fixed BG colour bleeding onto the border

--- a/app/public/css/default.less
+++ b/app/public/css/default.less
@@ -53,8 +53,9 @@
     text-align: center;
 
     border-radius: 5px; 
-    border: 8px solid rgba(0, 0, 0, 0.5);
-    background: rgba(0, 0, 0, 0.5);
+    border: 8px solid rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.4);
+    background-clip: padding-box;
 
     h1 {
         color:  @primary;
@@ -73,7 +74,6 @@
         line-height: 40px;
         padding-left: 5px;
         background-color: #4B0082;
-        margin-left: 5px;
         background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
         font-size: 25px;
     }
@@ -81,11 +81,12 @@
     .name {
         padding-left: 10px;
         text-align: left;
-        width: 490px;
+        width: 498px;
     }
 
     .time { 
         width: 130px;
+        margin-left: 5px;
     }
 
     .row {       
